k8s/intelperweb-ingress.yaml
apiVersion: networking.k8s.io/v1beta1 # for versions before 1.14 use extensions/v1beta1
kind: Ingress
metadata:
  name: web-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: intelweb.info
    http:
      paths:
      - path: /
        backend:
          serviceName: intelperfweb
          servicePort: 5000
